--- a/style.css
+++ b/style.css
@@ -1,32 +1,71 @@
+body {
+    background-color: black;
+    color: white;
+    margin: 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .clearfix::after {
     content: '';
     display: block;
     clear: both;
 }
 
-/* .topNavBar {
-
+.topNavBar {
+    margin: 30px 16px 30px 16px;
 }
 
-.logo {
-    float: left;
-} */
-
 .topNavBar>nav>ul>li {
-    margin: 36px 18px 0 18px;
-    font-size: 12px;
+    margin: 0px 18px 0 18px;
+    font-size: 13px;
     float: left;
     list-style: none;
     /* border: 1px solid green; */
 }
 
 .topNavBar>nav>ul>li>a {
-    text-decoration: none;
+    display: block;
     color: #c2c4c6;
+    font-weight: bold;
+    padding: 5px 0 5px 0;
+    border-top: 3px solid red transparent;
+    border-bottom: 3px solid red transparent;
+}
+
+.topNavBar>nav>ul>li>a:hover {
+    border-bottom: 3px solid #dc6066;
 }
 
 .topNavBar>nav>ul {
     margin: 0;
     padding: 0;
     /* border: 1px solid red; */
+}
+
+.topNavBar>.logo {
+    /* border: 1px solid red; */
+    float: left;
+    padding: 0 0 10px 0;
+}
+
+.topNavBar>nav {
+    float: right;
+    padding: 4px 0 5px 0;
+}
+
+.topNavBar>.logo {
+    font-size: 26px;
+    font-family: 'Fredoka One';
+}
+
+.topNavBar>.logo>.rs {
+    color: #e8656b;
+}
+
+.topNavBar>.logo>.card {
+    color: #9a9da2;
 }
