--- a/style.css
+++ b/style.css
@@ -16,11 +16,16 @@ a {
 }
 
 .topNavBar {
-    margin: 30px 16px 30px 16px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 30px 16px 30px 16px;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .topNavBar>nav>ul>li {
-    margin: 0px 18px 0 18px;
+    padding: 0px 18px 0 18px;
     font-size: 13px;
     float: left;
     list-style: none;
@@ -68,4 +73,10 @@ a {
 
 .topNavBar>.logo>.card {
     color: #9a9da2;
+}
+
+.banner {
+    background-image: url(./img/bgc.jpg);
+    width: 100%;
+    height: 515px;
 }
