--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 body {
-    background-color: black;
-    color: white;
+    background-color: #efefef;
+    color: black;
     margin: 0;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+hr {
+    height: 0;
+    border: none;
+    border-top: 1px solid #dedede
 }
 
 a {
@@ -79,4 +90,117 @@ a {
     background-image: url(./img/bgc.jpg);
     width: 100%;
     height: 515px;
+    background-position: center center;
+    background-size: cover;
+}
+
+.banner .mask {
+    height: 515px;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.userCard {
+    border: 1px solid red;
+    max-width: 930px;
+    margin: auto;
+    background-color: #ffffff;
+}
+
+.userCard .welcome {
+    text-transform: uppercase;
+    background-color: #e8656b;
+    color: white;
+    display: inline-block;
+    padding: 4px 16.5px;
+    line-height: 22px;
+    position: relative;
+    margin: 0 0 10px 0;
+    /* width: 70px;
+    height: 29px;
+    line-height: 29px;
+    text-align: center; */
+}
+
+.triangle {
+    display: block;
+    width: 0px;
+    /* height: 200px; */
+    border-top: 9px solid #e8656b;
+    border-right: 9px solid transparent;
+    border-left: 9px solid transparent;
+    border-bottom: 9px solid transparent;
+    border-left-width: 0px;
+    position: absolute;
+    top: 100%;
+    left: 9px;
+}
+
+.userCard .pictureAndText {
+    margin: 0 0 39px 0;
+}
+
+.userCard .picture {
+    margin: 57px 0 0 50px;
+    float: left;
+}
+
+.userCard .text {
+    margin: 57px 50px 0 64px;
+    float: left;
+    width: 460px;
+}
+
+.userCard .text h1 {
+    margin: 18px 0 5px 0;
+}
+
+.userCard .text hr {
+    margin: 20px 0;
+}
+
+.userCard footer.media {
+    /* border: 1px solid red; */
+    background-color: #e8656b;
+    text-align: center;
+}
+
+.userCard>footer.media>a {
+    box-sizing: border-box;
+    display: inline-block;
+    /* border: 1px solid red; */
+    width: 48px;
+    /* height: 40px; */
+    line-height: 30px;
+    padding: 8px 0;
+    border-radius: 50%;
+    margin: 19px;
+}
+
+.userCard>footer.media>a:hover {
+    background-color: #d05b60;
+}
+
+.userCard svg {
+    box-sizing: border-box;
+    padding: 4px 0 0 0;
+    width: 25px;
+    height: 25px;
+    fill: white;
+    vertical-align: top;
+}
+
+.userCard dt,
+.userCard dd {
+    float: left;
+    padding: 10px 0;
+}
+
+.userCard dt {
+    width: 30%;
+    font-weight: bold;
+}
+
+.userCard dd {
+    width: 70%;
+    color: #b9bcc1
 }
