download button done

--- a/style.css
+++ b/style.css
@@ -96,11 +96,11 @@ a {
 
 .banner .mask {
     height: 515px;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(44, 51, 64, 0.8);
 }
 
 .userCard {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     max-width: 930px;
     margin: auto;
     background-color: #ffffff;
@@ -203,4 +203,32 @@ a {
 .userCard dd {
     width: 70%;
     color: #b9bcc1
+}
+
+main {
+    margin-top: -340px;
+}
+
+.downloadButton-wrapper {
+    text-align: center;
+}
+
+main .downloadButton {
+    margin: 32px;
+    text-transform: uppercase;
+    border: 1px solid #cbcdcfed;
+    background-color: #efefef;
+    color: #3d4450;
+    font-weight: bold;
+    display: inline-block;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 18px 60px;
+    transition: box-shadow 0.7s;
+
+}
+
+main .downloadButton:hover {
+    box-shadow: -3px 7px 9px -2px rgba(184, 184, 184, 1);
 }
