--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ a {
 }
 
 .topNavBar>.logo {
-    font-size: 26px;
+    font-weight: 100;
+    font-size: 30px;
     font-family: 'Fredoka One';
 }
 
@@ -104,6 +105,7 @@ a {
     max-width: 930px;
     margin: auto;
     background-color: #ffffff;
+    box-shadow: 0px 1px 5px 1px rgba(150, 145, 150, 0.73);
 }
 
 .userCard .welcome {
@@ -111,7 +113,7 @@ a {
     background-color: #e8656b;
     color: white;
     display: inline-block;
-    padding: 4px 16.5px;
+    padding: 3px 8px;
     line-height: 22px;
     position: relative;
     margin: 0 0 10px 0;
@@ -226,9 +228,75 @@ main .downloadButton {
     line-height: 16px;
     padding: 18px 60px;
     transition: box-shadow 0.7s;
-
 }
 
 main .downloadButton:hover {
     box-shadow: -3px 7px 9px -2px rgba(184, 184, 184, 1);
+}
+
+.selfIntroduction {
+    text-align: center;
+    max-width: 930px;
+    margin: auto;
+    font-size: 18px;
+    font-family: kai;
+    line-height: 1.6;
+}
+
+.skills {
+    margin: auto;
+    margin-top: 60px;
+    color: #3d4450;
+    max-width: 930px;
+}
+
+.skills>h2 {
+    font-size: 34px;
+    text-align: center;
+}
+
+.skills>ol {
+    margin: 25px 0;
+    /* border: 1px solid red; */
+    padding: 17px 40px 30px 40px;
+    background-color: #fff;
+    box-shadow: 0px 1px 5px 1px rgba(150, 145, 150, 0.73);
+}
+
+ul,
+ol {
+    list-style: none;
+}
+
+.skills li {
+    box-sizing: border-box;
+    /* border: 1px solid red; */
+    text-transform: uppercase;
+    float: left;
+    width: 50%;
+    padding: 22px 10px 22px 10px;
+}
+
+.skills li:nth-child(even) {
+    float: right;
+}
+
+.skills li h3 {
+    margin: 0 0 7px 0;
+    font-weight: unset;
+    font-size: 14px;
+}
+
+.skills .prograssBar {
+    background-color: #fae0e1;
+    box-sizing: border-box;
+    height: 5px;
+    width: 100%;
+}
+
+.skills .prograssBar .prograss {
+    box-sizing: border-box;
+    height: 100%;
+    background-color: #e8656b;
+    width: 70%;
 }
