--- a/loading.css
+++ b/loading.css
@@ -1,21 +1,22 @@
-* {
-    border: 1px solid
-}
-
-body {
-    margin: 0;
-    padding: 0;
-}
-
-.wrapper {
+.loadingPage {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100vh;
-    position: relative;
+    background-color: rgb(234, 234, 234);
+    z-index: 10;
 }
 
-.loading::before,
-.loading::after {
+.loadingPage.active{
+    display: block;
+}
+
+.loadingAnimation::before,
+.loadingAnimation::after {
     content: '';
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -28,7 +29,7 @@ body {
     background-color: black;
 }
 
-.loading::after {
+.loadingAnimation::after {
     animation-delay: 0.75s
 }
 
