--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 hr {
     height: 0;
     border: none;
-    border-top: 1px solid #dedede
+    border-top: 1px solid #dedede;
 }
 
 a {
@@ -36,18 +36,26 @@ a {
 
 .topNavBarWrapper {
     width: 100%;
-    /* border: 1px solid red; */
-    position: absolute;
+    position: fixed;
+    z-index: 1;
 }
 
 .topNavBarWrapper .topNavBar {
-    /* border: 1px solid red; */
+    color: #c2c4c6;
     max-width: 1566px;
     margin: auto;
     box-sizing: border-box;
-    padding: 30px 16px 30px 16px;
+    padding: 30px 16px 20px 16px;
     top: 0;
     left: 0;
+    transition: all 0.3s;
+}
+
+.topNavBarWrapper .topNavBar.sticky {
+    background-color: white;
+    padding: 10px 16px 0px 16px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    color: rgba(61, 68, 81);
 }
 
 .topNavBarWrapper .topNavBar>nav>ul>li {
@@ -55,20 +63,68 @@ a {
     font-size: 13px;
     float: left;
     list-style: none;
-    /* border: 1px solid green; */
+    position: relative;
 }
 
 .topNavBarWrapper .topNavBar>nav>ul>li>a {
     display: block;
-    color: #c2c4c6;
     font-weight: bold;
     padding: 5px 0 5px 0;
     border-top: 3px solid red transparent;
     border-bottom: 3px solid red transparent;
+    color: inherit;
+    position: relative;
 }
 
-.topNavBarWrapper .topNavBar>nav>ul>li>a:hover {
-    border-bottom: 3px solid #dc6066;
+.topNavBarWrapper .topNavBar>nav>ul>li.active>a::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #dc6066;
+    height: 3px;
+    animation: menuSlide 0.8s cubic-bezier(0, 0, 0.23, 0.99);
+    z-index: 1;
+}
+
+@keyframes menuSlide {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
+}
+
+.topNavBarWrapper .topNavBar li>.subMenu {
+    position: absolute;
+    right: 18px;
+    top: 100%;
+    display: none;
+    background-color: #fff;
+    color: rgb(61, 68, 81);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+}
+
+@keyframes subMenuSlide {
+    0% {
+        transform: translateX(-30%)
+    }
+    100% {
+        transform: translateX(0)
+    }
+}
+
+.topNavBarWrapper .topNavBar li.active>.subMenu {
+    display: block;
+    animation: subMenuSlide .3s cubic-bezier(0, 0, 0.23, 0.99);
+}
+
+.topNavBarWrapper .topNavBar .subMenu>li {
+    white-space: nowrap;
+    padding: 5px 10px;
 }
 
 .topNavBarWrapper .topNavBar>nav>ul {
@@ -219,7 +275,7 @@ main .userCard dt {
 
 main .userCard dd {
     width: 70%;
-    color: #b9bcc1
+    color: #b9bcc1;
 }
 
 main {
@@ -389,6 +445,7 @@ section.portfolio nav .bar .innerBar.state-3 {
 
 section.portfolio .works {
     /* border: 1px solid red; */
+    margin-top: 26px;
     position: relative;
 }
 
