--- a/style.css
+++ b/style.css
@@ -378,6 +378,7 @@ section.skills .prograssBar .prograss {
 
 section.portfolio {
     text-align: center;
+    margin-bottom: 800px;
 }
 
 section.portfolio nav {
@@ -445,7 +446,7 @@ section.portfolio nav .bar .innerBar.state-3 {
 
 section.portfolio .works {
     /* border: 1px solid red; */
-    margin-top: 26px;
+    margin: 26px 0 0 0;
     position: relative;
 }
 
