--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a {
     color: rgba(61, 68, 81);
 }
 
-.topNavBarWrapper .topNavBar > nav > ul > li {
+.topNavBarWrapper .topNavBar>nav>ul>li {
     padding: 0px 18px 0 18px;
     font-size: 13px;
     float: left;
@@ -72,7 +72,7 @@ a {
     position: relative;
 }
 
-.topNavBarWrapper .topNavBar > nav > ul > li > a {
+.topNavBarWrapper .topNavBar>nav>ul>li>a {
     display: block;
     font-weight: bold;
     padding: 5px 0 5px 0;
@@ -82,8 +82,8 @@ a {
     position: relative;
 }
 
-.topNavBarWrapper .topNavBar > nav > ul > li.active > a::after,
-.topNavBarWrapper .topNavBar > nav > ul > li.highLight > a::after {
+.topNavBarWrapper .topNavBar>nav>ul>li.active>a::after,
+.topNavBarWrapper .topNavBar>nav>ul>li.highLight>a::after {
     content: '';
     display: block;
     position: absolute;
@@ -100,13 +100,12 @@ a {
     0% {
         width: 0;
     }
-
     100% {
         width: 100%;
     }
 }
 
-.topNavBarWrapper .topNavBar li > .subMenu {
+.topNavBarWrapper .topNavBar li>.subMenu {
     position: absolute;
     right: 18px;
     top: 100%;
@@ -120,51 +119,49 @@ a {
     0% {
         transform: translateX(-30%);
     }
-
     100% {
         transform: translateX(0);
     }
 }
 
-.topNavBarWrapper .topNavBar li.active > .subMenu {
+.topNavBarWrapper .topNavBar li.active>.subMenu {
     display: block;
     animation: subMenuSlide 0.3s cubic-bezier(0, 0, 0.23, 0.99);
 }
 
-.topNavBarWrapper .topNavBar .subMenu > li {
+.topNavBarWrapper .topNavBar .subMenu>li {
     white-space: nowrap;
     padding: 5px 10px;
 }
 
-.topNavBarWrapper .topNavBar > nav > ul {
+.topNavBarWrapper .topNavBar>nav>ul {
     margin: 0;
     padding: 0;
-
     /* border: 1px solid red; */
 }
 
-.topNavBarWrapper .topNavBar > .logo {
+.topNavBarWrapper .topNavBar>.logo {
     /* border: 1px solid red; */
     float: left;
     padding: 0 0 10px 0;
 }
 
-.topNavBarWrapper .topNavBar > nav {
+.topNavBarWrapper .topNavBar>nav {
     float: right;
     padding: 4px 0 5px 0;
 }
 
-.topNavBarWrapper .topNavBar > .logo {
+.topNavBarWrapper .topNavBar>.logo {
     font-weight: 100;
     font-size: 30px;
     font-family: 'Fredoka One';
 }
 
-.topNavBarWrapper .topNavBar > .logo > .rs {
+.topNavBarWrapper .topNavBar>.logo>.rs {
     color: #e8656b;
 }
 
-.topNavBarWrapper .topNavBar > .logo > .card {
+.topNavBarWrapper .topNavBar>.logo>.card {
     color: #9a9da2;
 }
 
@@ -198,7 +195,6 @@ main .userCard .welcome {
     line-height: 22px;
     position: relative;
     margin: 0 0 10px 0;
-
     /* width: 70px;
     height: 29px;
     line-height: 29px;
@@ -208,7 +204,6 @@ main .userCard .welcome {
 main .userCard .triangle {
     display: block;
     width: 0px;
-
     /* height: 200px; */
     border-top: 9px solid #e8656b;
     border-right: 9px solid transparent;
@@ -249,13 +244,11 @@ main .userCard footer.media {
     text-align: center;
 }
 
-main .userCard > footer.media > a {
+main .userCard>footer.media>a {
     box-sizing: border-box;
     display: inline-block;
-
     /* border: 1px solid red; */
     width: 48px;
-
     /* height: 40px; */
     line-height: 30px;
     padding: 8px 0;
@@ -263,7 +256,7 @@ main .userCard > footer.media > a {
     margin: 19px;
 }
 
-main .userCard > footer.media > a:hover {
+main .userCard>footer.media>a:hover {
     background-color: #d05b60;
 }
 
@@ -337,15 +330,14 @@ section.portfolio,
     max-width: 930px;
 }
 
-section.skills > h2,
-section.portfolio > h2 {
+section.skills>h2,
+section.portfolio>h2 {
     font-size: 34px;
     text-align: center;
 }
 
-section.skills > ol {
+section.skills>ol {
     margin: 25px 0;
-
     /* border: 1px solid red; */
     padding: 17px 40px 30px 40px;
     background-color: #fff;
@@ -359,7 +351,6 @@ ol {
 
 section.skills li {
     box-sizing: border-box;
-
     /* border: 1px solid red; */
     text-transform: uppercase;
     float: left;
@@ -411,7 +402,7 @@ section.skills.offset li .prograssBar .prograss {
 
 section.portfolio {
     text-align: center;
-    margin-bottom: 800px;
+    margin-bottom: 150px;
 }
 
 section.portfolio nav {
@@ -421,7 +412,6 @@ section.portfolio nav {
 section.portfolio ol {
     margin: 40px 0 0 0;
     display: inline-block;
-
     /* border: 1px solid red; */
     vertical-align: top;
 }
@@ -448,7 +438,6 @@ section.portfolio nav .bar {
     background-color: #fff;
     border-radius: 2px;
     margin-top: -5px;
-
     /* border: 2.5px solid white; */
 }
 
@@ -485,32 +474,6 @@ section.portfolio .works {
     position: relative;
 }
 
-section.portfolio .works .big {
-    top: 0;
-    left: 0;
-    height: 576px;
-    position: absolute;
-    bottom: 1px;
-}
-
-section.portfolio .works :nth-child(2) {
-    position: absolute;
-
-    /* border: 1px solid red; */
-    top: 0;
-    left: 636px;
-}
-
-section.portfolio .works :nth-child(3) {
-    position: absolute;
-    top: 298px;
-    left: 636px;
-}
-
-section.portfolio .works img {
-    vertical-align: top;
-}
-
 [data-x].offset {
     transform: translateY(80px);
 }
@@ -520,9 +483,26 @@ section.portfolio .works img {
     transition: all 0.5s;
 }
 
-
 .swiper-container {
-    width: 930px;
+    width: 800px;
     height: 500px;
+    margin-top: 30px;
+}
 
+section.portfolio .swiper-button-next,
+section.portfolio .swiper-button-prev
+{
+    background-color: rgba(255, 255, 255, 0.781);
+    padding: 10px;
+    height: 44px;
+    width: 44px;
+    border-radius: 50%;
+    top: 55%;
+    left: 100%;
+    right: auto;
+}
+
+section.portfolio .swiper-button-prev {
+    left: auto;
+    right: 100%;
 }
